--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,6 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: kiachatbot_app
-    volumes:
-      - .:/var/www
     depends_on:
       - mysql
     networks:
@@ -36,7 +34,7 @@ services:
     ports:
       - "9000:80"
     volumes:
-      - .:/var/www
+      - ./public:/var/www/public:ro
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
