--- a/nginx.conf
+++ b/nginx.conf
@@ -8,10 +8,10 @@ server {
     }
 
     location ~ \.php$ {
+        include fastcgi_params;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /var/www$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location ~ /\.ht {
