--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: kiachatbot_app
+    volumes:
+      - ./.env:/var/www/.env                   # ✅ Ensure .env is available
+      - ./vendor:/var/www/vendor               # ✅ Ensure composer dependencies persist
     depends_on:
       - mysql
     networks:
